<resources>
    <string name="app_name">BMI And PPM Calculator</string>
    <string name="title_home">Home</string>
    <string name="title_bmi_calculator">BMI Calculator</string>
    <string name="title_ppm_calculator">PPM Calculator</string>
    <string name="title_chart">Chart</string>
    <string name="title_quizzes">Quizzes</string>
    <string name="title_quiz">Quiz</string>
    <string name="app_description">This app can calculate your BMI and PPM</string>
    <string name="enter_height">Enter Height (cm)</string>
    <string name="enter_weight">Enter Weight (kg)</string>
    <string name="bmi">BMI</string>
    <string name="bmi_starvation">Starvation</string>
    <string name="bmi_emaciation">Emaciation</string>
    <string name="bmi_underweight">Underweight</string>
    <string name="bmi_correct_value">Correct Value</string>
    <string name="bmi_overweight">Overweight</string>
    <string name="bmi_first_degree_obesity">First Degree Obesity</string>
    <string name="bmi_second_degree_obesity">Second Degree Obesity</string>
    <string name="bmi_extreme_obesity">Extreme Obesity</string>
    <string name="ppm">PPM</string>
    <string name="gender">Choose Gender</string>
    <string name="gender_man">Man</string>
    <string name="gender_woman">Woman</string>
    <string name="enter_age">Enter age</string>
    <string name="recommendation_diet">Recommendation Diet</string>
    <string name="ppm_result">You should eat %1$s kcal</string>
    <string name="quizzes_message">Select quiz</string>
    <string name="food_quiz">Quiz about food</string>
    <string name="food_quiz_info">5 questions</string>
    <string name="start_quiz_button">Start quiz</string>
    <string name="food_quiz_start_score">Your score %1$s/5</string>
    <string name="question1_info">Question 1</string>
    <string name="question2_info">Question 2</string>
    <string name="question3_info">Question 3</string>
    <string name="question4_info">Question 4</string>
    <string name="question5_info">Question 5</string>
    <string name="question1_text">Which food is the healthiest?</string>
    <string name="question2_text">Which food is the healthiest?</string>
    <string name="question3_text">Which food is the healthiest?</string>
    <string name="question4_text">Which food is the healthiest?</string>
    <string name="question5_text">Which food is the healthiest?</string>
    <string name="question1_answer_1">Schnitzel</string>
    <string name="question1_answer_2">Pizza</string>
    <string name="question1_answer_3">Burger</string>
    <string name="question1_answer_4">Tortilla</string>
    <string name="question2_answer_1">Schnitzel</string>
    <string name="question2_answer_2">Pizza</string>
    <string name="question2_answer_3">Burger</string>
    <string name="question2_answer_4">Tortilla</string>
    <string name="question3_answer_1">Schnitzel</string>
    <string name="question3_answer_2">Pizza</string>
    <string name="question3_answer_3">Burger</string>
    <string name="question3_answer_4">Tortilla</string>
    <string name="question4_answer_1">Schnitzel</string>
    <string name="question4_answer_2">Pizza</string>
    <string name="question4_answer_3">Burger</string>
    <string name="question4_answer_4">Tortilla</string>
    <string name="question5_answer_1">Schnitzel</string>
    <string name="question5_answer_2">Pizza</string>
    <string name="question5_answer_3">Burger</string>
    <string name="question5_answer_4">Tortilla</string>
    <string name="question1_correct_answer">Schnitzel</string>
    <string name="question2_correct_answer">Schnitzel</string>
    <string name="question3_correct_answer">Schnitzel</string>
    <string name="question4_correct_answer">Schnitzel</string>
    <string name="question5_correct_answer">Schnitzel</string>
    <string name="submit_answers_button">Submit Answers</string>
</resources>
