<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_calculator"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_bmi_calculator"/>

    <item
        android:id="@+id/navigation_recommendation"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_ppm_calculator"/>

    <item
        android:id="@+id/navigation_chart"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/title_chart" />

    <item
        android:id="@+id/navigation_quiz"
        android:icon="@android:drawable/star_off"
        android:title="@string/title_quiz" />

</menu>
